--- a/estilo.css
+++ b/estilo.css
@@ -7,7 +7,7 @@
 div {
     width: 50%;
     height: 100px;
-    background-color: aquamarine;
+    background-color: bisque;
     border-radius: 25px;
     margin: 25px;
     padding: 50px;
